--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -39,10 +39,10 @@
           <div class="btn-group nav navbar-right">
               <a class="btn btn-default" href="/">Home</a>
               <!--<a class="btn btn-default" href="/pages/about.html">Roadmap</a>-->
-              <a class="btn btn-default" href="/posts.html">Blog</a>
-              <a class="btn btn-default" href="/pages/work.html">Work</a>
-              <a class="btn btn-default" href="/pages/notes">Notes</a>
-              <a class="btn btn-default" href="/pages/community.html">Community</a>
+              <a class="btn btn-default" href="posts.html">Blog</a>
+              <a class="btn btn-default" href="pages/work.html">Work</a>
+              <a class="btn btn-default" href="pages/notes">Notes</a>
+              <a class="btn btn-default" href="pages/community.html">Community</a>
           </div>
       </div>
   </div>
