--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@ layout: base
             <a href="/pages/work.html">
                 <div class="panel block panel-default">
                     <div class="panel-body iconic">
-                        <img class="center-block" src="/assets/design/building.png"/>
+                        <img class="center-block" src="assets/design/building.png"/>
                     </div>
                     <div class="panel-body iconic-button">
                     <button class="btn btn-primary btn-lg" role="button">Current work</button>
@@ -19,7 +19,7 @@ layout: base
             <a href="/pages/community.html">
                 <div class="panel block panel-default">
                     <div class="panel-body iconic">
-                        <img class="center-block" src="/assets/design/community.png"/>
+                        <img class="center-block" src="assets/design/community.png"/>
                     </div>
                     <div class="panel-body iconic-button">
                         <button class="btn btn-primary btn-lg" role="button">Join us</button>
