--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -39,10 +39,14 @@
           <div class="btn-group nav navbar-right">
               <a class="btn btn-default" href="/">Home</a>
               <!--<a class="btn btn-default" href="/pages/about.html">Roadmap</a>-->
+              <a class="btn btn-default" href="pages/project.html">Project</a>
+              <a class="btn btn-default" href="pages/standard.html">Standard</a>
+              <a class="btn btn-default" href="pages/progress.html">Progress</a>
               <a class="btn btn-default" href="posts.html">Blog</a>
-              <a class="btn btn-default" href="pages/work.html">Work</a>
-              <a class="btn btn-default" href="pages/notes">Notes</a>
-              <a class="btn btn-default" href="pages/community.html">Community</a>
+              <a class="btn btn-default" href="pages/resources.html">Resources</a>
+              <!--<a class="btn btn-default" href="pages/work.html">Work</a>-->
+              <!--default" href="pages/notes">Notes</a>-->
+              <a class="btn btn-default" href="pages/community.html">Get involved</a>
           </div>
       </div>
   </div>
