--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -41,7 +41,7 @@
               <!--<a class="btn btn-default" href="/pages/about.html">Roadmap</a>-->
               <a class="btn btn-default" href="/pages/project.html">Project</a>
               <a class="btn btn-default" href="./pages/standard.html">Standard</a>
-              <a class="btn btn-default" href="pages/progress.html">Progress</a>
+              <a class="btn btn-default" href="/pages/progress.html">Progress</a>
               <a class="btn btn-default" href="posts.html">Blog</a>
               <a class="btn btn-default" href="pages/resources.html">Resources</a>
               <!--<a class="btn btn-default" href="pages/work.html">Work</a>-->
