--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -34,19 +34,19 @@
       <div class="container">
           <img src="{{site.baseurl}}assets/design/open-contracting-ident.png" height="30" align="left" class="ident-logo"/>
           <div class="navbar-header collapse navbar-collapse">
-              <a class="navbar-brand" href="/">{{site.name}}</a>
+              <a class="navbar-brand" href="{{site.baseurl}}">{{site.name}}</a>
           </div>
           <div class="btn-group nav navbar-right">
-              <a class="btn btn-default" href="/">Home</a>
+              <a class="btn btn-default" href="{{site.baseurl}}">Home</a>
               <!--<a class="btn btn-default" href="/pages/about.html">Roadmap</a>-->
-              <a class="btn btn-default" href="/pages/project.html">Project</a>
-              <a class="btn btn-default" href="./pages/standard.html">Standard</a>
-              <a class="btn btn-default" href="/pages/progress.html">Progress</a>
-              <a class="btn btn-default" href="posts.html">Blog</a>
-              <a class="btn btn-default" href="pages/resources.html">Resources</a>
+              <a class="btn btn-default" href="{{site.baseurl}}pages/project.html">Project</a>
+              <a class="btn btn-default" href="{{site.baseurl}}pages/standard.html">Standard</a>
+              <a class="btn btn-default" href="{{site.baseurl}}pages/progress.html">Progress</a>
+              <a class="btn btn-default" href="{{site.baseurl}}pages/posts.html">Blog</a>
+              <a class="btn btn-default" href="{{site.baseurl}}pages/resources.html">Resources</a>
               <!--<a class="btn btn-default" href="pages/work.html">Work</a>-->
               <!--default" href="pages/notes">Notes</a>-->
-              <a class="btn btn-default" href="pages/community.html">Get involved</a>
+              <a class="btn btn-default" href="{{site.baseurl}}pages/community.html">Get involved</a>
           </div>
       </div>
   </div>
