--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -42,7 +42,7 @@
               <a class="btn btn-default" href="{{site.baseurl}}pages/project.html">Project</a>
               <a class="btn btn-default" href="{{site.baseurl}}pages/standard.html">Standard</a>
               <a class="btn btn-default" href="{{site.baseurl}}pages/progress.html">Progress</a>
-              <a class="btn btn-default" href="{{site.baseurl}}pages/posts.html">Blog</a>
+              <a class="btn btn-default" href="{{site.baseurl}}posts.html">Blog</a>
               <a class="btn btn-default" href="{{site.baseurl}}pages/resources.html">Resources</a>
               <!--<a class="btn btn-default" href="pages/work.html">Work</a>-->
               <!--default" href="pages/notes">Notes</a>-->
