--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,14 +1,13 @@
 ---
 layout: base
 ---
-
 <div class="post-title">
     <div class="row">
         <div class="col-xs-4 iconic-block">
             <a href="/pages/work.html">
                 <div class="panel block panel-default">
                     <div class="panel-body iconic">
-                        <img class="center-block" src="assets/design/building.png"/>
+                        <img class="center-block" src="/assets/design/building.png"/>
                     </div>
                     <div class="panel-body iconic-button">
                     <button class="btn btn-primary btn-lg" role="button">Current work</button>
@@ -20,7 +19,7 @@ layout: base
             <a href="/pages/community.html">
                 <div class="panel block panel-default">
                     <div class="panel-body iconic">
-                        <img class="center-block" src="assets/design/community.png"/>
+                        <img class="center-block" src="/assets/design/community.png"/>
                     </div>
                     <div class="panel-body iconic-button">
                         <button class="btn btn-primary btn-lg" role="button">Join us</button>
