--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,121 +1,55 @@
-
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="{{site.baseurl}}/assets/ico/favicon.png">
-
-    <title>{{page.title}}</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="{{site.baseurl}}assets/bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
-
+<!--[if IE 7]>     <html class="ie ie7 lt-ie8 lt-ie9" dir="ltr"
+lang="en-GB"> <![endif]-->
+<!--[if IE 8]>     <html class="ie ie8 lt-ie9" dir="ltr" lang="en-GB">
+<![endif]-->
+<!--[if IE 9]>     <html class="ie ie9" dir="ltr" lang="en-GB"> <![endif]-->
+<!--[if gt IE 9]>  <html dir="ltr" lang="en-GB"> <![endif]-->
+<!--[if !IE]><!--> <html dir="ltr" lang="en-GB"> <!--<![endif]-->
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="Description" content="">
+	<link href="http://fonts.googleapis.com/css?family=Rokkitt:700&subset=Latin" rel="stylesheet" type="text/css">
+	<link href='http://fonts.googleapis.com/css?family=Arvo:400,400italic,700' rel='stylesheet' type='text/css'>
+	<link rel="shortcut icon" href="{{site.baseurl}}/assets/ico/favicon.png">
+	<link href="css/style.css" rel="stylesheet" media="all" />
+	<title>{{page.title}}</title>
     <!-- Custom styles for this template -->
     <link href="{{site.baseurl}}assets/css/custom.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
-    
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.url }}/feed.xml">
+  	<!--[if lt IE 9]>
+  		<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js" media="all"></script>
+  	<![endif]-->
 
   </head>
 
   <body>
-  <!-- Fixed navbar -->
-  <div class="page-wrap">
-  <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
-          <img src="{{site.baseurl}}assets/design/open-contracting-ident.png" height="30" align="left" class="ident-logo"/>
-          <div class="navbar-header collapse navbar-collapse">
-              <a class="navbar-brand" href="{{site.baseurl}}">{{site.name}}</a>
-          </div>
-          <div class="btn-group nav navbar-right">
-              <a class="btn btn-default" href="{{site.baseurl}}">Home</a>
-              <!--<a class="btn btn-default" href="/pages/about.html">Roadmap</a>-->
-              <a class="btn btn-default" href="{{site.baseurl}}pages/project.html">Project</a>
-              <a class="btn btn-default" href="{{site.baseurl}}pages/standard.html">Standard</a>
-              <a class="btn btn-default" href="{{site.baseurl}}pages/progress.html">Progress</a>
-              <a class="btn btn-default" href="{{site.baseurl}}posts.html">Blog</a>
-              <a class="btn btn-default" href="{{site.baseurl}}pages/resources.html">Resources</a>
-              <!--<a class="btn btn-default" href="pages/work.html">Work</a>-->
-              <!--default" href="pages/notes">Notes</a>-->
-              <a class="btn btn-default" href="{{site.baseurl}}pages/community.html">Get involved</a>
-          </div>
-      </div>
-  </div>
-
-  <div class="main container">
-      {{ content }}
-    <div class="edit">
-        <a href="http://github.com/open-contracting/open-contracting.github.io/edit/master{{ page.url | replace: '.html', '.md'  }}" target="_blank" title="Permission required (ask us!)">edit</a>
-    </div>
-  </div>
-  </div>
-  <footer class="site-footer">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-6">
-                <div class="panel panel-inverse"><div class="panel-body">
-                        <p>The OCDS project is a collaboration of the <a href="http://www.open-contracting.org/home-v1">Open Contracting Partnership</a>,
-                        and the <a href="http://www.webfoundation.org">Web Foundation</a> funded by the <a href="http://www.omidyar.com">Omidyar Network</a></p>
-                </div></div>
-            </div>
-            <div class="col-xs-6">
-                <div class="panel panel-inverse"><div class="panel-body">
-                    <p>Site built with <a href="http://pages.github.com/">github pages</a>, <a href="http://getbootstrap.com">bootstrap</a>, 
-                    <a href="http://subtlepatterns.com">subtle patterns</a>, and <a href="http://somerandomdude.com/work/iconic/">iconic</a>. Any problems with the site, please contact us through <a href="https://github.com/open-contracting/open-contracting.github.io/issues">github</a>.
-                    </p>
-                </div></div>
-            </div>
+    <a href="#main">skip to content</a>
+  	<div>
+  		<header role="banner">
+  			<a href="{{site.baseurl}}"><img src="{{site.baseurl}}assets/design/open-contracting-ident.png" width="600" height="86" alt="Open Contracting logo"></a>
+  			<nav role="navigation">
+  				<ul>
+  					<li><a href="{{site.baseurl}}pages/project.html">Project</a></li>
+  					<li><a href="{{site.baseurl}}pages/standard.html">Standard</a></li>
+  					<li><a href="{{site.baseurl}}pages/progress.html">Progress</a></li>
+  					<li><a href="{{site.baseurl}}posts.html">Blog</a></li>
+  					<li><a href="{{site.baseurl}}pages/resources.html">Resources</a></li>
+  					<li><a href="{{site.baseurl}}pages/community.html">Get involved</a></li>
+  				</ul>
+  			</nav>
+  		</header>
+      <main role="main" id="main">
+        <div>
+          {{ content }}
         </div>
-    </div>
-  </footer>
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="{{site.baseurl}}assets/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="{{site.baseurl}}assets/js/toc.js"></script>
-    <script>
-        //Set the NavBar highlight
-        var url = window.location.href;
-        if(url.substr(-1) == '/') {
-            url = url.substr(0, url.length - 1);
-        }
-        $('.nav > a').filter(function() {
-            console.log(this.href);
-            console.log(url);
-            return this.href == url;
-        }).addClass('active');
-    </script>
-
-    <script type="text/javascript">
-        $(document).ready(function() {
-            $('.toc').toc({
-                showSpeed: 0,
-                title: ''
-            });
-        });
-    </script>
-
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-47685715-1', 'open-contracting.github.io');
-      ga('send', 'pageview');
-
-    </script>
+      </main>
+  		<footer role="contentinfo">
+  			<div>
+  				<p>The OCDS project is a collaboration of the <a href="http://www.open-contracting.org/home-v1">Open Contracting Partnership</a>, and the <a href="http://www.webfoundation.org">Web Foundation</a> funded by the <a href="http://www.omidyar.com">Omidyar Network</a></p>
+  			</div>
+  		</footer>
+  	</div>
   </body>
 </html>
-
