--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -28,7 +28,7 @@ lang="en-GB"> <![endif]-->
     <a href="#main">skip to content</a>
   	<div>
   		<header role="banner">
-  			<a href="{{site.baseurl}}"><img src="{{site.baseurl}}assets/design/open-contracting-ident.png" width="600" height="86" alt="Open Contracting logo"></a>
+  			<a href="{{site.baseurl}}"><img src="{{site.baseurl}}assets/design/logo_web.png" width="600" height="86" alt="Open Contracting logo"></a>
   			<nav role="navigation">
   				<ul>
   					<li><a href="{{site.baseurl}}pages/project.html">Project</a></li>
