banner link style

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -225,9 +225,8 @@ cite {
 	vertical-align: middle;
 }
 
-[role="banner"] img {
+[role="banner"] a {
 	width: 32%;
-	height: auto;
 }
 
 [role="banner"] nav {
