--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,4 +2,4 @@
 layout: base
 ---
 
-<h1>{{post.title}} <a href="#" class="button-shaped">the project</a></h1>
+<h1>{{page.title}} <a href="#" class="button-shaped">the project</a></h1>
