--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,3 +4,20 @@ layout: base
 
 <h1>{{page.title}} <a href="#" class="button-shaped">the project</a></h1>
 {{content}}
+<ul class="actions" aria-label="main topics">
+	<li>	
+		<img src="images/icon_work.png" alt=""/>
+		<p>Vestibulum eu porta augue. Curabitur adipiscing magna sed elit venenatis, eu adipiscing nulla eleifend.</p>
+		<p><a href="{{site.baseurl}}pages/progress.html" class="button-shaped">latest work</a></p>
+	</li>
+	<li>
+		<img src="images/icon_involved.png" alt=""/>
+		<p>Nam faucibus, turpis quis rhoncus iaculis, mi lacus luctus tortor, eu bibendum tellus mi fermentum massa.</p>
+		<p><a href="{{site.baseurl}}pages/community.html" class="button-shaped">get involved</a></p>
+	</li>
+	<li>
+		<img src="images/icon_blog.png" alt=""/>
+		<p>Quisque imperdiet consectetur erat luctus malesuada. Suspendisse potenti.</p>
+		<p><a href="{{site.baseurl}}pages/posts.html" class="button-shaped">our blog</a></p>
+	</li>
+</ul>
