--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -559,6 +559,10 @@ h1 .button-shaped {
 	padding: 0.25em;
 }
 
+#open_logo {
+	max-width: 400px;
+}
+
 /* breakpoints
 ------------------------------------------------------ */
 
