--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -559,8 +559,8 @@ h1 .button-shaped {
 	padding: 0.25em;
 }
 
-#open_logo {
-	max-width: 300px;
+#open-logo {
+	max-width: 400px;
 }
 
 /* breakpoints
