--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -552,7 +552,9 @@ h1 .button-shaped {
 
 .get-involved p {
 	margin: 0.25em 0 2em;
-	line-height: 1;
+	line-height: 1.1;
+	border: 0;
+	text-decoration: underline;
 }
 
 .get-involved a {
