--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -565,6 +565,37 @@ h1 .button-shaped {
 	max-width: 400px;
 }
 
+/* blog
+------------------------------------------------------ */
+
+.excerpts li {
+    list-style: none;
+}
+
+.excerpts h2 {
+    font-size: 1.75em;
+}
+
+.excerpts h2 + p {
+    margin-top: 0;
+}
+
+.excerpts .author, .excerpts time {
+    font-weight: bold;
+}
+
+.excerpts h2 + p [aria-hidden] {
+    padding: 0 0.5em;
+}
+
+.excerpts li + li:before {
+    content: '\2022\2022\2022';
+    display: block;
+    padding: 1.5em 0;
+    font-size: 1.5em;
+    text-align: center;
+}
+
 /* breakpoints
 ------------------------------------------------------ */
 
