--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -2,5 +2,5 @@
 layout: base
 ---
 
-<h1>{{ page.title }} (<a href="/feed.xml">RSS feed</a>)</h1>
+<h1>{{ page.title }} <a href="/feed.xml"><img src="{{site.baseurl}}/assets/design/rss.png" alt="RSS feed" /></a></h1>
 {{ content }}
