--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -12,7 +12,7 @@ lang="en-GB"> <![endif]-->
 	<meta name="Description" content="">
 	<link href="http://fonts.googleapis.com/css?family=Rokkitt:700&subset=Latin" rel="stylesheet" type="text/css">
 	<link href='http://fonts.googleapis.com/css?family=Arvo:400,400italic,700' rel='stylesheet' type='text/css'>
-	<link rel="shortcut icon" href="{{site.baseurl}}/assets/ico/favicon.png">
+	<link rel="shortcut icon" href="{{site.baseurl}}favicon.png">
 	<title>{{page.title}}</title>
     <!-- Custom styles for this template -->
     <link href="{{site.baseurl}}assets/css/custom.css" rel="stylesheet">
