--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,8 +2,9 @@
 layout: base
 ---
 
-<h1>{{page.title}} <a href="{{site.baseurl}}pages/project.html" class="button-shaped">the project</a></h1>
+<h1>{{page.title}}</h1>
 {{content}}
+<a href="{{site.baseurl}}pages/project.html" class="button-shaped">the project</a>
 <ul class="actions" aria-label="main topics">
 	<li>	
 		<img src="{{site.baseurl}}assets/design/icon_work.png" alt=""/>
