--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: base
 
 <h1>{{page.title}}</h1>
 {{content}}
-<p style="text-align: center;"><a href="{{site.baseurl}}pages/project.html" class="button-shaped">the project</a></p>
+<p style="text-align: center; margin-top: 0;"><a href="{{site.baseurl}}pages/project.html" class="button-shaped">the project</a></p>
 <ul class="actions" aria-label="main topics">
 	<li>	
 		<img src="{{site.baseurl}}assets/design/icon_work.png" alt=""/>
