--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -594,10 +594,10 @@ article h1 + p {
 }
 
 .excerpts li + li:before {
-    content: '\2022\2022\2022';
+    content: '\2022';
     display: block;
-    padding: 1.5em 0;
-    font-size: 1.5em;
+    padding: 0.75em 0;
+    font-size: 3em;
     text-align: center;
 }
 
