--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -156,6 +156,7 @@ hr {
     border: 0;
     height: 0.75em;
     background: url(images/hr.png) repeat-x center center;
+    background: url(images/hr.svg) repeat-x center center;
     background-size: auto 100%;
     margin: 3em 0;
 }
