--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -168,23 +168,14 @@ li, dt, dd, option {
 blockquote, figure {
 	font-size: 1.25em;
 	padding: 1.5em;
-	background: #ddd;
+	background: #ededed;
 	text-shadow: 2px 2px 0 solid #fff;
 	border-radius: 0.125em;
+	box-shadow: 3px 3px #505256;
 }
 
 blockquote > p, figcaption {
 	font-style: italic;
-}
-
-blockquote > p:before {
-	content: '\201c';
-	font-family: Georgia, serif;
-}
-
-blockquote > p:after {
-	content: '\201d';
-	font-family: Georgia, serif;
 }
 
 figcaption {
