--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,6 +19,6 @@ layout: base
 	<li>
 		<img src="{{site.baseurl}}assets/design/icon_blog.png" alt=""/>
 		<p>{{page.our_blog}}</p>
-		<p><a href="{{site.baseurl}}pages/posts.html" class="button-shaped">our blog</a></p>
+		<p><a href="{{site.baseurl}}posts.html" class="button-shaped">our blog</a></p>
 	</li>
 </ul>
