--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -59,8 +59,8 @@
         <div class="row">
             <div class="col-xs-6">
                 <div class="panel panel-inverse"><div class="panel-body">
-                        <p>The OCDS project is a collaboration of the <a href="http://www.open-contracting.org/home-v1">Open Contracting Partnership</a>,
-                        and the <a href="http://www.webfoundation.org">Web Foundation</a> funded by the <a href="http://www.omidyar.com">Omidyar Network</a></p>
+                
+                        <p>The Open Contracting Data Standard is a core product of the <a href="http://www.open-contracting.org/">Open Contracting Partnership (OCP)</a>. Version 1.0 of the standard is being developed for the OCP by the  <a href="http://www.webfoundation.org">World Wide Web Foundation</a> and <a href="http://www.aptivate.org">Aptivate</a>, through a project supported by <a href="http://www.omidyar.com/">The Omidyar Network</a> and <a href="http://www.worldbank.org">The World Bank</a></p>
                 </div></div>
             </div>
             <div class="col-xs-6">
